--- a/Individual/Part 3/public/style/style.css
+++ b/Individual/Part 3/public/style/style.css
@@ -15,6 +15,10 @@ table tr td {
     position: relative;
 }
 
+button{
+    cursor: pointer;
+}
+
 #err {
     color: rgba(255, 0, 0, 0.8);
     position: absolute;
@@ -23,6 +27,10 @@ table tr td {
     font-size: 20px;
     width: 400px;
     text-align: left;
+}
+
+.PropertyMain #err{
+    top: -25% !important;
 }
 
 .HomeMain div {
@@ -265,7 +273,7 @@ input[type="number"]:-webkit-scrollbar {
 .PropertyMain form>label {
     color: rgba(250, 250, 250, 0.9);
     font-size: 30px;
-    width: 280px;
+    width: 320px;
     display: block;
     margin: auto !important;
     padding: 5% 0% !important;
