--- a/Individual/Part 3/public/style/style.css
+++ b/Individual/Part 3/public/style/style.css
@@ -7,15 +7,16 @@
 main {
     width: 100%;
     height: 100vh;
-    background: rgba(50, 190, 100, 0.7);
+    background: rgba(50, 190, 100, 0.35);
     color: rgba(245, 245, 245, 0.8);
+    z-index: -1;
 }
 
 table tr td {
     position: relative;
 }
 
-button{
+button {
     cursor: pointer;
 }
 
@@ -29,8 +30,12 @@ button{
     text-align: left;
 }
 
-.PropertyMain #err{
+.PropertyMain #err {
     top: -25% !important;
+}
+
+.HomeMain {
+    background: rgba(50, 190, 100, 0.8) !important;
 }
 
 .HomeMain div {
@@ -144,12 +149,12 @@ input[type="number"]:-webkit-scrollbar {
     display: none;
 }
 
-.RegMain form table tr td input:hover {
+input:hover {
     background-color: rgba(197, 247, 105, 0.3);
     color: rgba(250, 250, 250, 0.9);
 }
 
-.RegMain form table tr td input:active {
+input:active {
     background-color: initial;
 }
 
@@ -193,6 +198,7 @@ input[type="number"]:-webkit-scrollbar {
     padding: 2mm 0mm !important;
     position: relative;
     top: 100px;
+    color: rgba(250, 250, 250, 0.8) !important;
 }
 
 .ValMain div a {
@@ -256,10 +262,51 @@ input[type="number"]:-webkit-scrollbar {
     font-size: 22px;
 }
 
+#AllMain {
+    height: 100% !important;
+    padding-bottom: 5mm;
+}
+
+#AllMain div {
+    top: 0;
+}
+
+#AllMain div>label {
+    font-size: 28px;
+    font-weight: 600;
+    width: 180px;
+    text-align: center;
+    display: block;
+    margin: auto !important;
+}
+
+.BGblur {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("../static/propBG.jpg");
+    background-size: 100%;
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+}
+
+form {
+    z-index: 10;
+}
+
+table {
+    z-index: 10;
+}
+
 .PropertyMain {
     padding-bottom: 20mm !important;
     display: block;
-    position: relative;
 }
 
 .PropertyMain form {
@@ -321,8 +368,7 @@ input[type="number"]:-webkit-scrollbar {
     font-size: 18px;
     border: none;
     border-radius: 2px;
-    background-color: rgba(173, 217, 230, 1);
-    color: rgba(250, 250, 250, 0.9);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .PropertyMain form table tr td select {
@@ -334,8 +380,7 @@ input[type="number"]:-webkit-scrollbar {
     font-size: 22px;
     border: none;
     border-radius: 2px;
-    background-color: rgba(173, 217, 230, 1);
-    color: rgba(250, 250, 250, 0.9);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .PropertyMain form table tr td select:focus {
@@ -343,7 +388,7 @@ input[type="number"]:-webkit-scrollbar {
 }
 
 .PropertyMain form table tr td select option {
-    color: rgba(250, 250, 250, 0.9);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .PropertyMain form button {
